# orbital-debris-analysis

./: Dockerfile  Dockerrun.aws.json  LICENSE  README.md  docker-compose.yml  mission_all_threats.csv  mission_threat_report.csv  pyproject.toml
client/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
client/src/: index.html  styles.scss
client/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
client/src/app/mission/: mission.component.html  mission.component.scss  mission.component.ts
client/src/app/services/: mission-data-share.service.spec.ts  mission-data-share.service.ts  mission.service.ts
client/src/app/threat-report/: threat-report.component.html  threat-report.component.spec.ts  threat-report.component.ts
client/src/environments/: environment.prod.ts
orbital_debris_analysis/: main.py  optimize.py  setting.py
orbital_debris_analysis/analysis_ui/: root_window.py
orbital_debris_analysis/api/: debris_analysis_api.py
orbital_debris_analysis/csv_parser/: csv_parser.py
orbital_debris_analysis/debris_analysis/: debris_analysis.py
orbital_debris_analysis/models/: mission.py  object_type_enum.py  status_enum.py  threat_report.py
tests/: test_csv_parser.py  test_debris_analysis.py
