[tool.poetry]
name = "orbital-debris-analysis"
version = "0.1.0"
description = ""
authors = ["Connor McNaboe <mcnaboeconnor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pydantic = "^2.6.1"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[tool.poetry.scripts]
startup = "orbital_debris_analysis.analysis_ui:root_window.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
