[tool.poetry]
name = "orbital-debris-analysis"
version = "0.1.0"
description = ""
authors = ["Connor McNaboe <mcnaboeconnor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pydantic = "^2.6.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[tool.poetry.scripts]
start = "orbital_debris_analysis.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
